# kotoba_bot_random_kanji

./: .gitignore  CMakeLists.txt  README.md  todo.txt
data/: exceptions.txt  freq2more.txt  freq_2022_10k.txt  jouyou.csv  jouyou_a1.txt  jouyou_a1_fixed.txt  jouyou_v5.txt  n4_kanji_alphabet.txt  n4_kanji_alphabet1-50.txt  n4_kanji_alphabet101-150.txt  n4_kanji_alphabet151-200.txt  n4_kanji_alphabet201-250.txt  n4_kanji_alphabet251-end.txt  n4_kanji_alphabet51-100.txt  n4_onyomi.txt  repeat_these.txt  reps.txt  rules01.txt  todo.txt  verbs.csv  verbs.txt  verbs.txt.csv  verbs_ok.csv
data/decks/: afixes.csv  (+21 more)
data2/: n4.txt  n45single.txt  n4comp.txt  n4single.txt  n5.txt  n5comp.txt  n5single.txt
include/: files.hpp
kotoba_csv/: all2.csv  linguistic.csv  n4_kanji_1_50.txt  n4_kanji_all.txt  out_days.csv  out_jlpt4_add.csv  out_minna.csv  out_minna01.csv  out_minna02.csv  out_minna03.csv  out_n3_comp.csv  out_n3_mix.csv  out_n3_single.csv  out_n4_comp.csv  out_n4_kan_sin.csv  out_n4_kanji_all.csv  out_n4_kanji_all.txt  out_n4_kanji_single.csv  out_n4_meanings.csv  out_n4_mix.csv  out_n4_n5_kan_sin.csv  out_n4_repeat.csv  out_n4_single.csv  out_n5_comp.csv  out_n5_kan_sin.csv  out_n5_mix.csv  out_n5_single.csv  out_reps.csv  out_reps.txt  out_reps1.csv
scripts/: 3_to_csv.py  countr_freq.py  enkahi_to_out.py  fix.py  gen_reading.py  kan_read_to_mix_csv.py  kan_read_to_single_csv.py  kanji_pair_to_csv.py  kata_to_hira.py  look_in_freq.sh  main.py  minna_reps.py  powershell.txt  replace1_3.py  reps.py  reverse_order_123.py  to_single_kanji.py
src/: files.cpp  main.cpp
(+13 files in other folders)
